--- a/UserScriptInjector/manifest.json
+++ b/UserScriptInjector/manifest.json
@@ -6,7 +6,6 @@
   "permissions": ["storage"],
   "host_permissions": ["<all_urls>"],
   "action": {
-    "default_popup": "popup.html",
     "default_title": "Definir site destino"
   },
   "content_scripts": [
@@ -14,6 +13,13 @@
       "matches": ["<all_urls>"],
       "js": ["content.js"],
       "run_at": "document_idle"
+    }
+  ]
+  ,
+  "web_accessible_resources": [
+    {
+      "resources": ["codigos/*.js","codigos/index.json"],
+      "matches": ["<all_urls>"]
     }
   ]
 }
